<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="entry_options">Entry Options</string>
	
	<string name="mental_health">Mental Health</string>
	<string name="physical_health">Physical Health</string>
	<string name="financial">Financial Well-being</string>
	<string name="educational">Educational Pursuit</string>
	<string name="altruistic">Altruistic Deed</string>
	
	<string name="choose_categories">Categories</string>
	<string name="okay">Okay</string>
	<string name="cancel">Cancel</string>

    <string name="app_name">BeProud</string>
    <string name="action_settings">Settings</string>
    <string name="category">Category</string>
    <string name="hello_world">Hello world!</string>
    <string name="numberone">#1</string>
    <string name="add_entries">+</string>
    <string name="choose_value">choose a value:</string>
    <string name="save">Save</string>
    <string name="add_more">Feeling extra proud? Add another accomplishment.</string>
    <string name="mood">How are you feeling today?</string>
    <string name="sansserif">sans-serif</string>
    <string name="today">Today</string>
    <string name="month">Month</string>
    <string name="list">List</string>
    <string name="add">Add</string>
    <string name="chart">Chart</string>
    
    <color name="white">#FFFFFF</color>
    <color name="text_color">#31D1F1</color>

</resources>